# Rabbit

./: .gitignore  .gitmodules  README.md  xmake.lua
VLFDLibUSBDriver/: CMakeLists.txt  ProgramVLFD.cpp  ProgramVLFD.h  Program_error.h  SMIMS_API.cpp  SMIMS_API.h  SMIMS_VLFD.cpp  SMIMS_VLFD.h  SMIMS_define.h  SMIMS_iobase.cpp  SMIMS_iobase.h  VLFDLibUSB-win-x64.lib  pch.h  serialcheck.cpp  serialcheck.h
doc/: AddNewComponent.md  RabbitDevDoc.md  RabbitHelpDoc.md
doc/DevDoc/: ComponentsDevDoc.md
rabbit_App/include/: Common.h  CommonSettings.h  FPGAManager.h  MainTabToolBar.h  MainWindow.h  NewProjectDialog.h  ProjectFileHandler.h  ProjectManager.h  SettingsDialog.h  ThreadTimer.h  Utils.h
rabbit_App/include/Components/: AbstractComponent.h  ButtonComponent.h  ComponentAction.h  ComponentMacro.h  ComponentSettingsDialog.h  ComponentTitleBar.h  Components.h  ComponentsFactory.h  ComponentsPanel.h  GraphicLCDComponent.h  KeyPadComponent.h  LEDComponent.h  LEDMatrixComponent.h  PS2KeyboardComponent.h  PanelGuiUpdateController.h  RotaryButtonComponent.h  SegmentDisplayComponent.h  SwitchComponent.h  TextLCDComponent.h  ValueUpdateController.h
rabbit_App/include/FPGA/: AsyncVLFDReadWrite.h  VLFDDeviceDetector.h  VLFDDeviceHandler.h  VLFDFFI.h  VLFDProgramHandler.h  VLFDRunningHandler.h
rabbit_App/include/Ports/: PinInfo.h  Port.h  PortsFileReader.h
rabbit_App/include/WaveForm/: WaveFormController.h
rabbit_App/res/: res.qrc
rabbit_App/res/RabbitIcon/: Rabbit.icns
rabbit_App/res/tabtoolbar/: tabtoolbar.json
rabbit_App/src/: FPGAManager.cpp  MainTabToolBar.cpp  MainWindow.cpp  NewProjectDialog.cpp  ProjectFileHandler.cpp  ProjectManager.cpp  SettingsDialog.cpp  ThreadTimer.cpp  Utils.cpp  main.cpp
rabbit_VLFD/: .gitignore
rabbit_VLFD/include/: ErrorCodeDefs.h  VLFDHandler.h  VLFDManager.h
rabbit_VLFD/src/: VLFDHandler.cpp  VLFDManager.cpp
(+26 files in other folders)
